Changes in Version 2.3-5

  o Added new interface exams2ilias() for the open-source ILIAS learning
    management system (https://www.ilias.de/). This is essentially a
    convenience wrapper to exams2qti12(), tweaking a few defaults and
    employing a somewhat modified XML template.

  o Aadded tinytex::latexmk() as an alternative to tools::texi2dvi() when
    converting to PDF output (exams2nops, exams2pdf, ...) as suggested
    by Yihui Xie. The default is to use tinytex if(requireNamespace("tinytex")).
    However, by setting options(exams_tex = "tools") instead of
    exams_tex = "tinytex" the old behavior can be enforced even if tinytex
    is installed

  o Improved NOPS language support: Added Japanese (ja, Kohei Watanabe),
    Slovenian (sl, Matjaz Jeran), Vietnamese (vi, Tran Thi Hoang Ha).
    Some languages require that markboth/pagestyle are set after
    begin{document} and that a newpage is included directly before
    end{document}, both of which were adapted correspondingly.
    
  o Improvements in nops_eval(): Show exam ID in HTML report and round
    points to four digits. The language= file paths do not have to be
    absolute anymore.


Changes in Version 2.3-4

  o Avoid execution of examples on CRAN that would necessitate pandoc availability.
    Currently, the "rmarkdown" package but not the underlying "pandoc" support
    is installed for the CRAN checks on Solaris and OS X.


Changes in Version 2.3-3

  o Added new interface exams2canvas() for the open-source Canvas learning
    management system (https://www.instructure.com/canvas/). This is essentially
    a convenience wrapper to exams2qti12() along with a few Canvas-specific
    modifications of the QTI XML specification. The function has only received
    limited testing so far and is likely to improve in future version. The
    supported exercise types are num, schoice, mchoice, and string (but not
    cloze, yet).
