@@ -2,7 +2,7 @@ exams2html <- function(file, n = 1L, nsamp = NULL, dir = ".", template = NULL,
   name = NULL, quiet = TRUE, edir = NULL, tdir = NULL, sdir = NULL, verbose = FALSE,
   question = "<h4>Question</h4>", solution = "<h4>Solution</h4>",
   mathjax = NULL, resolution = 100, width = 4, height = 4, svg = FALSE,
-  encoding = "", envir = NULL, converter = NULL, ...)
+  encoding = "", envir = NULL, converter = NULL, seed = NULL, ...)
 {
   ## for Rnw exercises use "ttm" converter and "plain" template,
   ## otherwise "pandoc" converter and "plain8" template
@@ -39,7 +39,7 @@ exams2html <- function(file, n = 1L, nsamp = NULL, dir = ".", template = NULL,
     driver = list(sweave = list(quiet = quiet, pdf = FALSE, png = !svg, svg = svg,
       resolution = resolution, width = width, height = height, encoding = encoding, envir = envir),
       read = NULL, transform = htmltransform, write = htmlwrite),
-    dir = dir, edir = edir, tdir = tdir, sdir = sdir, verbose = verbose)
+    dir = dir, edir = edir, tdir = tdir, sdir = sdir, verbose = verbose, seed = seed)
 
   ## display single .html on the fly
   if(display) {
