@@ -13,7 +13,7 @@
     inputs = NULL, header = list(Date = Sys.Date()), name = NULL, 
     control = NULL, encoding = "", quiet = TRUE, transform = NULL,
     edir = NULL, tdir = NULL, sdir = NULL, texdir = NULL,
-    verbose = FALSE, points = NULL, \dots)
+    verbose = FALSE, points = NULL, seed = NULL, \dots)
   
   make_exams_write_pdf(template = "plain", inputs = NULL,
     header = list(Date = Sys.Date()), name = NULL, encoding = "",
@@ -69,6 +69,11 @@
     argument overules any exercise points that are provided within the \code{expoints} tags
     of the exercise files (if any). The vector of points supplied should either have
     length 1 or the number of exercises in the exam.}
+  \item{seed}{integer matrix. Either \code{NULL} (default) or a matrix of
+    random seeds for each possible exercise to be set prior to weaving each
+    exercise. If \code{NULL} no random seeds are set. If a matrix,
+    the number of rows must be \code{n} and the number of columns must
+    correspond to \code{unlist(file)}.}
   \item{\dots}{further arguments passed on to \code{\link[exams]{xweave}}.}
 }
 
