@@ -14,7 +14,7 @@
   xexams(file, n = 1L, nsamp = NULL,
     driver = list(sweave = NULL, read = NULL, transform = NULL, write = NULL),
     dir = ".", edir = NULL, tdir = NULL, sdir = NULL, verbose = FALSE,
-    points = NULL, \dots)
+    points = NULL, seed = NULL, \dots)
 
   exams_metainfo(x, \dots)
 }
@@ -49,6 +49,11 @@
     argument overules any exercise points that are provided within the \code{expoints} tags
     of the exercise files (if any). The vector of points supplied should either have
     length 1 or the number of exercises in the exam.}
+  \item{seed}{integer matrix. Either \code{NULL} (default) or a matrix of
+    random seeds for each possible exercise to be set prior to calling
+    \code{driver@sweave}. If \code{NULL} no random seeds are set. If a matrix,
+    the number of rows must be \code{n} and the number of columns must
+    correspond to \code{unlist(file)}.}
   \item{x}{a list as returned by \code{xexams}.}
   \item{\dots}{currently not used.}
 }
